<resources>
    <string name="app_name">Android_Chat</string>
    <string name="seconnecter">Connexion</string>
    <string name="bienvenueTitle">Bienvenue</string>
    <string name="senregistrer">S\'enregistrer</string>
    <string name="profil">Modifier votre profil</string>
    <string name="modifier">Modifier</string>
    <string name="envoyer">Envoyer</string>
    <string name="votreMessage">Votre message : </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="suivant">Suivant</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_change_mdp">Si vous réinitialisez votre mot de passe, tout les logins des affaires enregistrées devront être ressaisie lors de votre prochaine connexion.</string>
    <string name="user">Utilisateur</string>
    <string name="mdpInfo">Mot de passe</string>
    <string name="new_mdp">Nouveau mot de passe</string>
    <string name="reinitialiser_mdp">Réinitialiser votre mot de passe ?</string>
    <string name="new_project">Enregistrer un nouveau projet</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="add_affaire">Ajouter une affaire</string>
    <string name="todo">TODO</string>
    <string name="logout">Déconnexion</string>
</resources>
